# gnu_techne

./: .gitignore  .valgrindrc  AUTHORS  ChangeLog  Makefile.am  NEWS  NOTES  README  configure.ac  valgrind.supp
doc/: techne-browser.1  techne.1
grass/: Makefile.am  blade.lc  grass.lua  grassdemo.in  path.lua  runmoretests.in  runtests.in
scripts/patches/: profile.lua
scripts/tests/: atmosphere.lua  bezier.lua  common.lua  diamondsquare.lua  elevation.lua  graph.lua  joints.lua  orbit.lua  springs.lua  textured.lua  vegetation.lua  widgets.lua
scripts/utils/: basic.lua  frame.lua  orbit.lua
src/: Makefile.am  accoustics.c  accoustics.h  algebra.h  body.c  body.h  browser.c  builtin.c  builtin.h  common.h  controller.c  controller.h  controllers.c  cursor.c  cursor.h  dynamic.c  dynamic.h  dynamics.c  dynamics.h  event.c  event.h  graphic.c  graphic.h  graphics.c  graphics.h  input.c  input.h  joint.c  joint.h  main.c  memory.c  mkopengl.sh  morebase.c  moremath.c  network.c  network.h  node.c  node.h  object.c  object.h  (+25 more)
src/aeronautics/: aeronautics.lua  airplane.c  airplane.h  core.c
src/array/: Makefile  README  algebra.c  array.c  array.h  array.lua  core.c  operations.c
src/arraymath/: arraymath.h  arraymath.lua  core.c  operations.c  tests.lua
src/automotive/: automotive.lua  chain.c  chain.h  core.c  fourstroke.c  fourstroke.h  ground.c  ground.h  racetrack.c  racetrack.h  wheel.c  wheel.h
src/bodies/: ball.c  ball.h  bodies.lua  box.c  box.h  capsule.c  capsule.h  core.c  cylinder.c  cylinder.h  environment.c  environment.h  plane.c  plane.h  point.c  point.h  polyhedron.c  polyhedron.h  system.c  system.h
src/boot/: init.lua  profilingreports.lua
src/compat/: asprintf.h
src/console/: console.lua  core.c
src/controllers/: controller.c  controller.h  controllers.lua  core.c  device.c  device.h  keyboard.c  keyboard.h  pointer.c  pointer.h
src/glsl/: color.glsl.c  elevation_fragment.glsl.c  elevation_vertex.glsl.c  flat_fragment.glsl.c  flat_vertex.glsl.c  grass_fragment.glsl.c  grass_geometry.glsl.c  grass_tesselation_control.glsl.c  grass_tesselation_evaluation.glsl.c  grass_vertex.glsl.c  gravel_fragment.glsl.c  gravel_geometry.glsl.c  gravel_tesselation_control.glsl.c  gravel_tesselation_evaluation.glsl.c  gravel_vertex.glsl.c  layout_fragment.glsl.c  preamble.glsl.c  rand.glsl.c  seeds_fragment.glsl.c  seeds_tesselation_control.glsl.c  seeds_tesselation_evaluation.glsl.c  seeds_vertex.glsl.c  splat_common.glsl.c  splat_fragment.glsl.c  splat_vertex.glsl.c  splatting.glsl.c  stringify.c  textured_fragment.glsl.c  textured_vertex.glsl.c  transform_block.glsl.c  vegetation_common.glsl.c  vegetation_fragment.glsl.c  vegetation_geometry.glsl.c  vegetation_geometry_header.glsl.c  vegetation_geometry_top.glsl.c  vegetation_tesselation_control.glsl.c  vegetation_tesselation_control_header.glsl.c  vegetation_tesselation_evaluation.glsl.c  vegetation_tesselation_evaluation_header.glsl.c  vegetation_vertex.glsl.c
src/joints/: angular.c  angular.h  clamp.c  clamp.h  contact.c  contact.h  core.c  doubleball.c  doubleball.h  doublehinge.c  doublehinge.h  euler.c  euler.h  gearing.c  gearing.h  hinge.c  hinge.h  joints.lua  linear.c  linear.h  planar.c  planar.h  slider.c  slider.h  sliderhinge.c  sliderhinge.h  slideruniversal.c  slideruniversal.h  spherical.c  spherical.h  universal.c  universal.h
src/meteorology/: libmeteorology.c  libmeteorology.h  meteorology.c  meteorology.h
src/misc/: bindings.lua  physics.c  recorder.lua  resources.lua  rubberband.lua  serialize.lua  units.lua
src/primitives/: core.c  cursor.c  cursor.h  observer.c  observer.h  primitives.lua  timer.c  timer.h
src/prompt/: ChangeLog  Makefile  README  luap  luap.c  prompt.c
src/shading/: core.c  flat.c  flat.h  overlay.c  overlay.h  program.c  program.h  shading.lua  textured.c  textured.h  wireframe.c  wireframe.h
src/shapes/: core.c  line.c  line.h  lines.c  lines.h  points.c  points.h  polygon.c  polygon.h  shape.c  shape.h  shapes.lua
src/staging/: bezier.c  bezier.h  core.c  staging.lua
src/textures/: core.c  textures.lua
src/topography/: atmosphere.c  atmosphere.h  barren.c  barren.h  blades.h  bounds.c  core.c  elevation.c  elevation.h  elevation_body.c  elevation_seeds.c  elevation_shape.c  grass.c  grass.h  gravel.c  gravel.h  palette.c  roam.c  roam.h  roam_vegetation.c  seeding.c  seeding.h  seeds.c  seeds.h  splat.c  splat.h  splatting.c  splatting.h  swatch.c  swatch.h  topography.lua  vegetation.c  vegetation.h
src/transform/: Makefile  README  core.c  transform.lua
src/widgets/: assembly.c  assembly.h  column.c  column.h  core.c  display.c  display.h  layout.c  layout.h  row.c  row.h  widget.c  widget.h  widgets.lua
tools/: Makefile.am  pgmtoelevation.c  pngtoarray.c  pnmtoimagery.c
